// Vitest Snapshot v1

exports[`textfield > should render 1`] = `
<input
  class="block w-full rounded-md border-gray-300 py-3 shadow-sm focus:border-orange-500 focus:ring-orange-500 dark:border-gray-700 dark:bg-gray-900 dark:focus:border-orange-500"
  id="username"
  name="username"
  placeholder=""
  type="text"
  value=""
/>
`;

exports[`textfield > should render with error 1`] = `
<div>
  <div>
    <label
      class="mb-1 block text-sm font-medium text-gray-700 dark:text-gray-100"
      for="username"
    >
      Username
    </label>
    <input
      class="border-red-500 block w-full rounded-md border-gray-300 py-3 shadow-sm focus:border-orange-500 focus:ring-orange-500 dark:border-gray-700 dark:bg-gray-900 dark:focus:border-orange-500"
      id="username"
      name="username"
      placeholder=""
      type="text"
      value=""
    />
    <p
      class="mt-2 text-sm text-red-500"
      id="username-error"
    >
      Required
    </p>
  </div>
</div>
`;

exports[`textfield > should render with label 1`] = `
<div>
  <div>
    <label
      class="mb-1 block text-sm font-medium text-gray-700 dark:text-gray-100"
      for="username"
    >
      Username
    </label>
    <input
      class="block w-full rounded-md border-gray-300 py-3 shadow-sm focus:border-orange-500 focus:ring-orange-500 dark:border-gray-700 dark:bg-gray-900 dark:focus:border-orange-500"
      id="username"
      name="username"
      placeholder=""
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`textfield > should render with placeholder 1`] = `
<div>
  <div>
    <label
      class="mb-1 block text-sm font-medium text-gray-700 dark:text-gray-100"
      for="username"
    >
      Username
    </label>
    <input
      class="block w-full rounded-md border-gray-300 py-3 shadow-sm focus:border-orange-500 focus:ring-orange-500 dark:border-gray-700 dark:bg-gray-900 dark:focus:border-orange-500"
      id="username"
      name="username"
      placeholder="Username"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`textfield > should render with type 1`] = `
<div>
  <div>
    <label
      class="mb-1 block text-sm font-medium text-gray-700 dark:text-gray-100"
      for="password"
    >
      Password
    </label>
    <input
      class="block w-full rounded-md border-gray-300 py-3 shadow-sm focus:border-orange-500 focus:ring-orange-500 dark:border-gray-700 dark:bg-gray-900 dark:focus:border-orange-500"
      id="password"
      name="password"
      placeholder=""
      type="password"
      value=""
    />
  </div>
</div>
`;

exports[`textfield > should render with value 1`] = `
<div>
  <div>
    <label
      class="mb-1 block text-sm font-medium text-gray-700 dark:text-gray-100"
      for="username"
    >
      Username
    </label>
    <input
      class="block w-full rounded-md border-gray-300 py-3 shadow-sm focus:border-orange-500 focus:ring-orange-500 dark:border-gray-700 dark:bg-gray-900 dark:focus:border-orange-500"
      id="username"
      name="username"
      placeholder=""
      type="text"
      value="test"
    />
  </div>
</div>
`;
